--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,46 @@
-header {
-    display:flex;
-    flex-direction: row;
+body {
+    margin: 0;
+    font-family: 'Titillium Web', sans-serif;
+    background-color: whitesmoke;
 }
 
-body {
-    font-family: 'Titillium Web', sans-serif;
+header {
+    width:100%;
+
+    display:flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+
+    border-bottom: solid #252525;
+    box-shadow: 0 0px 10px 1px rgb(37, 37, 37);
 }
 
 #logo {
-    width:75%;
+    margin-top:0.5rem;
+    margin-left:0.5rem;
+    width:30rem;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+nav a {
+    padding: 1rem;
+    height:100%;
+
+    font-size: 20px;
+}
+
+nav a:hover {
+    background-color: rgb(207, 207, 207);
+}
+
+@media only screen and (min-width: 500px) and (min-device-width: 500px) {
+    header {
+        flex-direction: row;
+    }
 }
