--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,8 @@ body {
 
 header {
     width:100%;
+    position: absolute;
+    /*top:0;*/
 
     display:flex;
     flex-direction: column;
@@ -13,6 +15,7 @@ header {
     align-items: center;
     justify-content: space-between;
 
+    background-color: #f5f5f5;
     border-bottom: solid #252525;
     box-shadow: 0 0px 10px 1px rgb(37, 37, 37);
 }
@@ -25,22 +28,58 @@ header {
 
 a {
     text-decoration: none;
-    color: black;
+    color: #000000;
 }
 
-nav a {
+#chev-down {
+    padding: 0.5rem;
+}
+
+.nav-bar {
+    list-style: none;
+    display:none;
+}
+
+nav ul li {
     padding: 1rem;
     height:100%;
 
     font-size: 20px;
 }
 
-nav a:hover {
+nav ul li:hover {
     background-color: rgb(207, 207, 207);
+}
+
+#picture-banner {
+    width: 100%;
+    height: 20rem;
+
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    background-color: #036b5a; 
+}
+
+#picture-banner p {
+    color: #f5f5f5;
 }
 
 @media only screen and (min-width: 500px) and (min-device-width: 500px) {
     header {
+        flex-direction: row;
+    }
+}
+
+@media only screen and (min-width: 990px) and (min-device-width: 990px) {
+    #chev-down {
+        display:none;
+    }
+
+    .nav-bar {
+        display: flex;
         flex-direction: row;
     }
 }
