--- a/css/styles.css
+++ b/css/styles.css
@@ -37,6 +37,10 @@ a {
     background-color: #f5f5f5;
 }
 
+.fa-chevron-down {
+    width: 1rem;
+}
+
 #nav-bar {
     display:none;
     position: absolute;
@@ -49,7 +53,7 @@ nav ul li {
     padding: 1rem;
 
     list-style: none;
-    font-size: 20px;
+    font-size: 1.25rem;
 }
 
 nav ul li:hover, nav ul li:focus {
@@ -58,6 +62,7 @@ nav ul li:hover, nav ul li:focus {
 
 main {
     margin-top: 6rem;
+    scroll-behavior: smooth;
 }
 
 #picture-banner {
@@ -67,13 +72,9 @@ main {
     display:flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
 
-    background-color: #036b5a; 
-}
-
-#picture-banner p {
-    color: #f5f5f5;
+    background: url("img\aircraft1.jpg") #036b5a; 
 }
 
 @media only screen and (min-width: 500px) and (min-device-width: 500px) {
