--- a/css/contactform.css
+++ b/css/contactform.css
@@ -1,13 +1,36 @@
 #phoneAndEmail {
-    height: 10rem;
+    height: 20rem;
+    margin-bottom: 3rem;
     padding: 3rem;
     display: flex;
-    justify-content: center;
-    font-size: 3rem;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
 
-#phoneAndEmail p {
-    padding: 3rem;
+.circle {
+    width: 100px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    background-color: #036b5a;
+    border-radius: 50px;
+}
+
+.fa-phone, .fa-envelope-o {
+    margin: auto;
+    font-size: 4rem;
+    color: #f5f5f5;
+}
+
+#phone, #email {
+    display: flex;
+    align-items: center;
+}
+
+#phone p, #email p {
+    padding: 20px;
+    font-size: 3rem;
 }
 
 #contactform {
@@ -58,8 +81,8 @@
 }
 
 @media only screen and (min-width: 1025px) and (min-device-width: 1025px) {
-    #phoneAndEmail{ 
-        font-size: 20px;
+    #phone p, #email p {
+        font-size: 2rem;
     }
 
     #contactform {
@@ -86,6 +109,10 @@
 }
 
 @media only screen and (min-width: 1500px) and (min-device-width: 1500px) {
+    #phoneAndEmail {
+        height: 10rem;
+    }
+    
     #contactform input, #contactform textarea {
         width: 60%;
         padding: 1rem;
