--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,18 @@ main {
     margin-top: 6rem;
     display:flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.information {
+    width: 100%;
+    padding: 2rem;
+}
+
+#medical {
+    padding: 2rem;
+    background-color: rgb(255, 42, 42);
 }
 
 @media only screen and (min-width: 500px) and (min-device-width: 500px) {
@@ -79,5 +91,9 @@ main {
         display:flex;
         flex-direction: row;
         position: static;
+    }
+
+    .information {
+        width: 60%;
     }
 }
